@@ -1,3 +1,7 @@
+2009-11-23  Steffen Kamper  <info@sk-typo3.de>
+
+	* Fixed bug: #12712: Add Hook renderElement_postProcessDataValues (Thanks to Jeff Segars)
+
 2009-11-16  Steffen Kamper  <info@sk-typo3.de>
 
 	* Fixed bug: #12589: recordlist localization doesn't return to pagemodule
